--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Translator</title>
+    <title>ChatSGT</title>
     <meta charset="UTF-8">
     <link href="../static/index.css" rel="stylesheet">
 </head>
